# django-plotly-dash

./: pyproject.toml
django_plotly_dash/: dash_wrapper.py
