[tool.poetry]
name = "django-plotly-dash"
version = "0.1.0"
description = ""
authors = ["Artur Z <doslunar8@gmail.com>"]
readme = "README.md"
packages = [{include = "django_plotly_dash"}]

[tool.poetry.dependencies]
python = "^3.12"
dash = ">=2.0"
plotly = "^5.22.0"
dpd-components = "^0.1.0"
dash-bootstrap-components = "^1.6.0"
channels = ">=4.0"
django = ">=4.0.0"
flask = ">=1.0.2"
werkzeug = "^3.0.3"
daphne = "^4.1.2"
bootstrap4 = "^0.1.0"
dpd-static-support = ">=0.0.4"
pandas = "^2.2.2"
django-bootstrap5 = "^24.2"
dash-mantine-components = "^0.14.3"
django-redis = "^5.4.0"
asgiref = "^3.8.1"
attrs = "^23.2.0"
coveralls = ">=1.6.0"
channels-redis = "^4.2.0"
django-bootstrap4 = "^24.3"
grip = "^4.6.2"
pylint = "^3.2.3"
pytest = ">=4.6"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
python-coveralls = "^2.9.3"
pytz = "^2024.1"
redis = "^5.0.6"
setuptools = "^70.1.0"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"
sphinx-rtd-theme = "^2.0.0"
twine = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
